<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_gymProgramInfo"
        android:icon="@drawable/infobtn"
        android:orderInCategory="100"
        android:title="@string/program_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_info"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:title="@string/edit_program_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_exercises"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:title="@string/edit_program_exercises"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/delete_program"
        app:showAsAction="never" />
</menu>