<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gymbuddy.EntriesActivity">
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/infobtn"
        android:orderInCategory="100"
        android:title="@string/exercise_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="200"
        android:title="@string/edit_exercise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/delete_exercise"
        app:showAsAction="never" />
</menu>