<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/enterExer"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/enterExer"
        android:gravity="center"
        android:text="@string/enterExer"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/exercise_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/example_exercise"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterExer"
        app:layout_constraintVertical_bias="0.0" />


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/exercise_name"
        tools:layout_editor_absoluteX="-72dp">

        <Spinner
            android:id="@+id/select_group"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_margin="16dp"

            android:layout_weight="1"
            android:entries="@array/muscle_groups"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/select_secontary_group"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_margin="16dp"

            android:layout_weight="2"
            android:entries="@array/muscle_groups"
            android:textSize="18sp" />

    </TableRow>

    <ImageView
        android:id="@+id/demoMuscleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/muscle_group_demo"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/biceps"
        app:layout_constraintEnd_toEndOf="@+id/tableRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <EditText
        android:id="@+id/exerciseDescriptionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/exersise_description"
        android:ems="10"
        android:hint="@string/exersise_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/demoMuscleView" />


</androidx.constraintlayout.widget.ConstraintLayout>